# PythonPiscine

./: README.md
P0/ex00/: Hello.py
P0/ex01/: format_ft_time.py
P0/ex02/: tester.py
P0/ex03/: tester.py
P0/ex04/: whatis.py
P0/ex05/: building.py
P0/ex06/: filterstring.py  ft_filter.py  tester.py
P0/ex07/: sos.py
P0/ex08/: Loading.py  tester.py
P0/ex09/: README.md  pyproject.toml
P0/ex09/ft_package/: ft_package.py
P0/ex09/ft_package.egg-info/: PKG-INFO  SOURCES.txt
P1/ex00/: give_bmi.py  tester.py
P1/ex01/: array2D.py  tester.py
P1/ex02/: load_image.py  tester.py
P1/ex03/: load_image.py  zoom.py
P1/ex04/: load_image.py  rotate.py
P1/ex05/: load_image.py  pimp_image.py  tester.py
P2/ex00/: load_csv.py
P2/ex01/: aff_life.py  tester.py
P2/ex02/: aff_pop.py
P2/ex03/: load_csv.py  projection_life.py
P3/ex00/: S1E9.py  tester.py
P3/ex01/: S1E7.py  tester.py
P3/ex02/: DiamondTrap.py  S1E7.py  S1E9.py
P3/ex03/: ft_calculator.py
P3/ex04/: ft_calculator.py
P4/ex00/: statistics.py
P4/ex01/: in_out.py  tester.py
P4/ex02/: callLimit.py
P4/ex03/: new_student.py
ex00/: Hello.py
ex02/: find_ft_type.py  tester.py
ex03/: NULL_not_found.py  tester.py
ex04/: whatis.py
ex05/: building.py
ex06/: filterstring.py
ex08/: Loading.py
ex09/: LICENSE  pyproject.toml
ex09/ft_package.egg-info/: SOURCES.txt
